# puerta

./: .github-refresh  .github_stats_refresh  .gitignore  CLAUDE.md  CONTRIBUTORS_CHART_UPDATE.md  CONTRIBUTOR_CLEANUP.md  Cargo.toml  DEV-SETUP.md  LICENSE  Makefile  README.md  clippy.toml  config_mongodb_test.toml  correct_config.toml  deny.toml  justfile  rustfmt-simple.toml  rustfmt.toml  test.sh  test_config.toml  test_mongodb_lb.sh
.github/workflows/: ci.yml
benches/: load_balancing.rs  performance.rs
config/: dev.toml  mongodb.toml  redis.toml
docs/: Puerta Proxy Refactor and Testing.md  api_reference.md  architecture.md  development_guidelines.md  performance_analysis.md
src/: error.rs  lib.rs  main.rs
src/config/: mod.rs
src/core/: backend.rs  connection.rs  frontend.rs  mod.rs  session.rs
src/health/: mod.rs  mongodb.rs  redis.rs
src/modes/: mod.rs
src/modes/mongodb/: affinity.rs  balancer.rs  mod.rs
src/modes/redis/: mod.rs  proxy.rs  redirect.rs  resp.rs  slots.rs
src/utils/: mod.rs
tests/: README.md  run_tests.sh  test.sh
tests/mongodb/: README.md  test_mongodb_lb_basic.sh  test_mongodb_lb_comprehensive.sh  test_mongodb_lb_quick.sh
tests/redis/: README.md  test_redis_lb_basic.sh  test_redis_lb_comprehensive.sh  test_redis_lb_quick.sh  test_redis_routing_logic.sh
