[package]
name = "puerta"
version = "0.1.0"
edition = "2021"
authors = ["puerta-team"]
description = "A high-performance load balancer for MongoDB Sharded Clusters and Redis Clusters"
license = "Apache-2.0"
repository = "https://github.com/deadjoe/puerta"

[dependencies]
# Pingora framework dependencies
# Note: These will need to be published crates or git dependencies
# pingora = "0.5"
# pingora-core = "0.5"
# pingora-proxy = "0.5"
# pingora-load-balancing = "0.5"
# pingora-http = "0.5"

# Redis cluster protocol support (from RCProxy)
# Will integrate RCProxy components as needed

# Standard dependencies
tokio = { version = "1.37", features = ["full"] }
bytes = "1.6"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
md5 = "0.7"
rand = "0.8"
async-trait = "0.1"
socket2 = "0.5"
log = "0.4"
env_logger = "0.11"

# Redis redirection support (based on RCProxy)
aho-corasick = "1.1"
btoi = "0.4"
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.10"

[[bench]]
name = "load_balancing"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
