[package]
name = "puerta"
version = "0.1.0"
edition = "2021"
authors = ["puerta-team"]
description = "A high-performance load balancer for MongoDB Sharded Clusters and Redis Clusters"
license = "Apache-2.0"
repository = "https://github.com/deadjoe/puerta"

[dependencies]
# Local development dependencies - uncomment after cloning Pingora to examples/
# See DEV-SETUP.md for complete setup instructions
#
# For local development, uncomment these lines:
# pingora = { path = "examples/pingora" }
# pingora-core = { path = "examples/pingora/pingora-core" }  
# pingora-load-balancing = { path = "examples/pingora/pingora-load-balancing" }
#
# For production builds, use crates.io versions when available:
# pingora = "0.1"
# pingora-core = "0.1" 
# pingora-load-balancing = "0.1"

# Redis cluster protocol support (integrated from RCProxy patterns)

# Standard dependencies
tokio = { version = "1.37", features = ["full"] }
bytes = "1.6"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
md5 = "0.7"
rand = "0.8"
async-trait = "0.1"
socket2 = "0.5"
log = "0.4"
env_logger = "0.11"

# Redis redirection support (based on RCProxy)
aho-corasick = "1.1"
btoi = "0.4"
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.10"

[[bench]]
name = "load_balancing"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
